--- a/deck.mdx
+++ b/deck.mdx
@@ -34,11 +34,11 @@ export {default as theme} from './src/theme';
 ## create-react-app
 
 <AppearList>
-  <li>yarn add redux</li>
-  <li>yarn add typescript</li>
-  <li>yarn add lodash</li>
-  <li>Write a lot of javascript</li>
-  <li>Write a lot of css</li>
+  <li>💻 yarn add redux</li>
+  <li>💻 yarn add typescript</li>
+  <li>💻 yarn add lodash</li>
+  <li>⌨️ Write a lot of javascript</li>
+  <li>️️⌨️ Write a lot of css</li>
 </AppearList>
 ---
 <TallImage src='assets/heaviest-objects.jpg' />
@@ -124,7 +124,7 @@ export {default as theme} from './src/theme';
   <ul>
     <li>Each bundle is small</li>
     <li>Vendor bundle contains React/Redux/Lodash whatever</li>
-    <li>We load the page when we need them, or at least make sure they don't block what we do need</li>    
+    <li>We load the page when we need them, or at least make sure they don't block what we do need</li>
   </ul>
 </Notes>
 
@@ -147,7 +147,7 @@ export {default as theme} from './src/theme';
 <Notes>
   <ul>
     <li>The main thing that's changed is most of our code lives in the browser</li>
-  </ul>	
+  </ul>
 </Notes>
 ---
 <CodeSurfer
@@ -211,7 +211,7 @@ export {default as theme} from './src/theme';
     <li>Action - Events, deltas emitted by the view</li>
     <li>Reducer - Receives actions and updates the state</li>
     <li>Store - the combination of Reducer + State + Dispatch</li>
-  </ul>	
+  </ul>
 </Notes>
 ---
 <img style={{padding: 10, maxWidth:'100vw'}} src="assets/slices.png" />
@@ -222,7 +222,7 @@ export {default as theme} from './src/theme';
     <li>A single action comes in and the root reducer gives it to every inner reducer</li>
     <li>This state is then combined into the big state object we read</li>
     <li>Which is also broken up into various slices</li>
-  </ul>	
+  </ul>
 </Notes>
 ---
 # Namespace == Slice
@@ -260,14 +260,14 @@ export {default as theme} from './src/theme';
     <li>Root Reducer - We're just gonna show the giphy namespace</li>
     <li>Gifs Reducer</li>
     <li>Gifs Selector</li>
-  </ul>	
+  </ul>
 </Notes>
 ---
 <CodeSurfer
   code={require("!raw-loader!./snippets/safety.ts").default}
   lang="typescript"
   showNumbers={false}
-  dark={true}  
+  dark={true}
 	steps={[
     {range: [1,9], title: "Wins From Typing"},
     {range: [10,15], title: "Actions"},
@@ -288,11 +288,11 @@ export {default as theme} from './src/theme';
 <Notes>
   <ul>
     <li>Store is statically typed with a dispatch function that knows shape and all possible actions</li>
-    <li>Actions - We can only dispatch actions we know about</li>    
+    <li>Actions - We can only dispatch actions we know about</li>
     <li>Selectors - We can only access data we know about</li>
     <li>Reducer signature - knows the shape of the namespace and all possible actions</li>
-    <li>Deep dive into FetchGifs </li>    
-  </ul>	
+    <li>Deep dive into FetchGifs </li>
+  </ul>
 </Notes>
 ---
 <h2>Naive Implementation</h2>
@@ -306,9 +306,9 @@ export {default as theme} from './src/theme';
   code={require("!raw-loader!./snippets/simple-action.ts").default}
   lang="typescript"
   showNumbers={false}
-  dark={true}  	
+  dark={true}
   steps={[
-    {range: [1,9]},    
+    {range: [1,9]},
   ]}
 />
 ---
@@ -318,7 +318,7 @@ export {default as theme} from './src/theme';
   code={require("!raw-loader!./snippets/simple-selector.ts").default}
   lang="typescript"
   showNumbers={false}
-  dark={true}    
+  dark={true}
 	steps={[
     {range: [1,9]},
   ]}
@@ -345,10 +345,10 @@ export {default as theme} from './src/theme';
 ---
 # We built this for Dropbox
 <AppearList>
-		<li>200+ engineers working on the same codebase</li>
-		<li>25 Namespaces</li>
-		<li>Any given page might need a permutation of 5-10</li>
-		<li>SF, NY, TLV, SEA</li>
+		<li>👩‍💻 200+ engineers working on the same codebase</li>
+		<li>📚 25 Namespaces</li>
+		<li>📘 Any given page might need a permutation of 5-10</li>
+		<li>🌎 SF, NY, TLV, SEA</li>
 </AppearList>
 ---
 # This has to run on every page.
@@ -394,9 +394,9 @@ export {default as theme} from './src/theme';
 ---
 # Failure Modes
 <ul>
-	<li>Silent errors</li>
-	<li>Works on my machine</li>
-	<li>Bugs around render order</li>
+	<li>🤫 Silent errors</li>
+	<li>🤔 Works on my machine</li>
+	<li>🏃‍♀️ Bugs around render order</li>
 </ul>
 <Notes>
 	Partially loaded state where we don't know what is/isn't loaded.
@@ -422,10 +422,6 @@ export {default as theme} from './src/theme';
 </NotesList>
 ---
 # Good developer experience
-<ul>
-  <li>Abstractions around code splitting, consumers shouldn’t be worried about it</li>
-  <li>Isolate the integration points (anywhere it isnt typesafe)</li>
-</ul>
 <Notes>
 	Abstractions around code splitting, engineers shouldn’t have to think about code splitting when they’re building features.
 </Notes>
@@ -436,7 +432,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="app.tsx"
   dark={true}
-	steps={[		
+	steps={[
 		{range: [14, 25]},
 		{range: [35, 49]},
     {lines: [39, 40, 41, 45, 46, 47]},
@@ -449,7 +445,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="gifs-page.tsx"
   dark={true}
-	steps={[		
+	steps={[
 		{lines: [54,56]},
 		{lines: [47, 49]},
 		{lines: [22]},
@@ -463,7 +459,7 @@ export {default as theme} from './src/theme';
   <ul>
     <li>This has a similar cognitive footprint to Lazy/Suspense.</li>
     <li>Nice experience for the gifs team, remember big company means teams for small features.</li>
-  </ul>	
+  </ul>
 </Notes>
 ---
 # Hows this work?
@@ -490,7 +486,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="store.ts"
   dark={true}
-	steps={[		
+	steps={[
 		{range: [34, 46]},
 		{range: [37, 43]},
 		{range: [18, 33]},
@@ -588,7 +584,7 @@ export {default as theme} from './src/theme';
 	title="types.ts"
   dark={true}
 	steps={[
-			{range: [43,51]},			
+			{range: [43,51]},
 	]}
 />
 ---
@@ -661,7 +657,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="types.ts"
   dark={true}
-	steps={[			
+	steps={[
       {tokens: {
         44: [5],
         45: [5],
@@ -673,7 +669,7 @@ export {default as theme} from './src/theme';
 	]}
 />
 <NotesList>
-  <li>Namespaces</li>  
+  <li>Namespaces</li>
 </NotesList>
 
 ---
@@ -685,15 +681,15 @@ export {default as theme} from './src/theme';
 	title="selectors.ts"
   dark={true}
 	steps={[
-      {lines: [7]},      
-      {range: [9,11]},   
-      {lines: [13]},         
+      {lines: [7]},
+      {range: [9,11]},
+      {lines: [13]},
 	]}
 />
 <NotesList>
-  <li>const slice</li>  
-  <li>throw</li>  
-  <li>return</li>  
+  <li>const slice</li>
+  <li>throw</li>
+  <li>return</li>
 </NotesList>
 ---
 
@@ -717,13 +713,13 @@ export {default as theme} from './src/theme';
 ---
 # Tradeoff: Loss of modularization
 <NotesList>
-  <li>We're rounding up all possible actions types</li>  
+  <li>We're rounding up all possible actions types</li>
   <li>
     Actions are historically just functions but here we're collecting types
   </li>
   <li>It ends up being worth it</li>
   <li>typescript just yells at you before you make your commit</li>
-  <li>we need to coordinate to prevent conflicts</li>	
+  <li>we need to coordinate to prevent conflicts</li>
 </NotesList>
 
 ---
@@ -738,16 +734,16 @@ export {default as theme} from './src/theme';
 			{range: [57,65]},
       {range: [86,91]},
       {lines: [88]},
-      {lines: [87]},			
+      {lines: [87]},
 			{range: [68,84]},
 	]}
 />
 <NotesList>
-  <li>Dispatch = ThunkDispatch + Store</li>    
+  <li>Dispatch = ThunkDispatch + Store</li>
   <li>SlytherinStandardAction</li>
   <li>slytherinId</li>
   <li>type: AllActionTypes, this is all possible strings</li>
-  <li>AllActionTypes + AllActions, we've rounded up every string and shape</li>  
+  <li>AllActionTypes + AllActions, we've rounded up every string and shape</li>
   <li>Where are these coming from?</li>
 </NotesList>
 ---
@@ -757,14 +753,14 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="gifs/types.ts"
   dark={true}
-	steps={[			
+	steps={[
 			{range: [28,31]},
 			{range: [16,27]},
 	]}
 />
 <NotesList>
-  <li>GifActions</li>    
-  <li>FetchGifSuccess + FetchGifError</li>  
+  <li>GifActions</li>
+  <li>FetchGifSuccess + FetchGifError</li>
 </NotesList>
 ---
 <CodeSurfer
@@ -773,7 +769,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="gifs/reducer.ts"
   dark={true}
-	steps={[			
+	steps={[
 			{range: [6,9]},
 			{range: [13,31]},
 			{range: [14,19]},
@@ -824,14 +820,6 @@ https://www.matthewgerstman.com/tech/redux-code-split-typecheck/
 
 ---
 
-# Thank You!
-
----
-
-<AboutMe />
-
----
-
 # References
 
 <ul>
@@ -845,3 +833,13 @@ https://www.matthewgerstman.com/tech/redux-code-split-typecheck/
     https://mariusschulz.com/blog/typescript-2-4-dynamic-import-expressions
   </li>
 </ul>
+
+---
+
+# Thank You!
+
+---
+
+<AboutMe />
+
+---
