--- a/deck.mdx
+++ b/deck.mdx
@@ -38,7 +38,7 @@ export {default as theme} from './src/theme';
   <li>💻 yarn add typescript</li>
   <li>💻 yarn add lodash</li>
   <li>⌨️ Write a lot of javascript</li>
-  <li>️️⌨️ Write a lot of css</li>
+  <li>⌨️ Write a lot of css</li>
 </AppearList>
 ---
 <TallImage src='assets/heaviest-objects.jpg' />
@@ -348,7 +348,7 @@ export {default as theme} from './src/theme';
 		<li>👩‍💻 200+ engineers working on the same codebase</li>
 		<li>📚 25 Namespaces</li>
 		<li>📘 Any given page might need a permutation of 5-10</li>
-		<li>🌎 SF, NY, TLV, SEA</li>
+		<li>🌎 NY, SEA, SF, TLV</li>
 </AppearList>
 ---
 # This has to run on every page.
@@ -785,14 +785,18 @@ export {default as theme} from './src/theme';
 # Developer Experience
 ---
 
-# CodeSplitProvider
+<div style={{fontSize:100}}>
+&#x3C;CodeSplitProvider /&#x3E;
+</div>
 
 <NotesList>
   <li>CodeSplitProvider garauntees reducers get registered</li>
 </NotesList>
 ---
 
-# getStateAtNamespace
+<div style={{fontSize:100}}>
+getStateAtNamespace()
+</div>
 
 <NotesList>
   <li>getStateAtNamespace ensures we fail fast if something goes wrong</li>
@@ -800,7 +804,9 @@ export {default as theme} from './src/theme';
 
 ---
 
-# types.ts
+<div style={{fontSize:100}}>
+types.ts
+</div>
 
 <NotesList>
   <li>types.ts ensures we never dispatch an action we can't handle</li>
@@ -841,5 +847,3 @@ https://www.matthewgerstman.com/tech/redux-code-split-typecheck/
 ---
 
 <AboutMe />
-
----
