Add slide on future

--- a/deck.mdx
+++ b/deck.mdx
@@ -345,6 +345,7 @@ export {default as theme} from './src/theme';
 ---
 # We built this for Dropbox
 <AppearList>
+    <li>📅 We had an ongoing performance initiative in 2017</li>
 		<li>👩‍💻 200+ engineers working on the same codebase</li>
 		<li>📚 25 Namespaces</li>
 		<li>📘 Any given page might need a permutation of 5-10</li>
@@ -813,10 +814,13 @@ types.ts
 </NotesList>
 
 ---
-
-# Code Available at
-
-https://github.com/matthew-gerstman/slytherin.dev
+# The Future
+<AppearList>
+  <li>💀 This code is likely to die</li>
+  <li>⚛️ The React ecosystem is constantly changing</li>
+  <li>☀️ Apollo, Hooks, or something else?</li>
+  <li>🌐 There is no silver bullet for global state</li>
+</AppearList>
 
 ---
 
