Add second demo

--- a/deck.mdx
+++ b/deck.mdx
@@ -375,7 +375,11 @@ export {default as theme} from './src/theme';
 ---
 
 # We’ve gotta figure out how to codesplit the reducer
-
+---
+# Demo: Back to Slytherin.dev
+<Notes>
+	Swap tabs to live demo, only show what it does
+</Notes>
 ---
 <div>
   <h2>Slytherin.dev</h2>
